--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,14 +6,6 @@
 @import "./detail";
 @import "./animation";
 
-/* Sticky Footer */
-html,
-body,
-#root      { height: 100%; }
-#root      { display: flex; flex-direction: column; }
-#root main { flex: 1 0 auto; }
-footer     { flex-shrink: 0; }
-
 /* Buttons and Links*/
 a,
 .btn.btn-link {
